--- a/.github/workflows/automerge-dependabot.yml
+++ b/.github/workflows/automerge-dependabot.yml
@@ -1,12 +1,20 @@
-name: Auto-merge Dependabot
-on: pull_request
+name: Auto-merge PRs
+
+on:
+  pull_request:
+    types: [opened, reopened, synchronize]
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]'
+
     steps:
-      - uses: peter-evans/enable-pull-request-automerge@v3
+      - name: Enable Auto-Merge
+        uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.ACTIONS_BOT_TOKEN }}
           pull-request-number: ${{ github.event.pull_request.number }}
