test(automerge bot)

--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -4,13 +4,6 @@ on:
   push:
     branches:
       - 'feat/*'
-      - 'fix/*'
-      - 'docs/*'
-      - 'refactor/*'
-      - 'perf/*'
-      - 'chore/*'
-      - 'style/*'
-      - 'test/*'
 
 permissions: 
   contents: write
@@ -40,7 +33,7 @@ jobs:
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
           signoff: false
-          delete-branch: true
+          delete-branch: false
           labels: |
             automated pr
             feature
