--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -44,3 +44,11 @@ jobs:
 
       - name: Output result
         run: echo "Pull Request created with number ${{ steps.create_pr.outputs.pull-request-number }}"
+
+      - name: Enable Pull Request Automerge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
