--- a/.github/workflows/automerge-dependabot.yml
+++ b/.github/workflows/automerge-dependabot.yml
@@ -1,21 +1,14 @@
-name: Auto-merge PRs
-
-on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled]
-
-permissions:
-  contents: write
-  pull-requests: write
+name: Auto-merge Dependabot
+on: pull_request
 
 jobs:
   automerge:
     runs-on: ubuntu-latest
-
+    if: github.actor == 'dependabot[bot]'
     steps:
-      - name: Enable Auto-Merge
-        uses: peter-evans/enable-pull-request-automerge@v3
+      - uses: peter-evans/enable-pull-request-automerge@v3
         with:
-          token: ${{ secrets.ACTIONS_BOT_TOKEN }}
           pull-request-number: ${{ github.event.pull_request.number }}
           merge-method: squash
+        env:
+          GH_TOKEN: ${{ secrets.ACTIONS_BOT_TOKEN }}
