--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -49,7 +49,7 @@ jobs:
         run: echo "Pull Request created with number ${{ steps.create_pr.outputs.pull-request-number }}"
 
       - name: Enable Pull Request Automerge
-        if: steps.cpr.outputs.pull-request-operation == 'created'
+        if: steps.create_pr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
