--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -50,6 +50,12 @@ jobs:
           echo "Pull Request created with number ${{ steps.create_pr.outputs.pull-request-number }}"
           echo "Pull Request created with operation ${{steps.create_pr.outputs.pull-request-operation}}"
 
+      - name: Auto approve
+        if: steps.create_pr.outputs.pull-request-operation == 'created'
+        run: gh pr review --approve "${{ steps.create_pr.outputs.pull-request-number }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Enable Pull Request Automerge
         if: steps.create_pr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v3
