--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -18,53 +18,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Debug Current Branch
-        run: |
-          echo "Current branch: ${{ github.ref_name }}"
-          echo "Checking for differences with base branch..."
-          git fetch origin development
-          git diff --name-only ${{ github.ref_name }} origin/development
 
       - name: Create Pull Request
         id: create_pr
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          base: development
-          branch: ${{ github.ref_name }}
-          title: 'Auto PR from ${{ github.ref_name }}'
-          body: |
-            This is an auto-generated pull request from the branch `${{ github.ref_name }}` to `development`.
-            Please review the changes and merge if appropriate.
-          assignees: ${{ github.actor }}
-          commit-message: add ${{github.ref_name}}
-          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-          author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
-          signoff: false
-          delete-branch: false
-          labels: |
-            automated pr
-            feature
-            bugfix
-          reviewers: kaggwe-marvin
-          milestone: 1
-          draft: false
-
-      - name: Debug Outputs
         run: |
-          echo "Pull Request Number: ${{ steps.create_pr.outputs.pull-request-number }}"
-          echo "Pull Request Operation: ${{ steps.create_pr.outputs.pull-request-operation }}"
+          BRANCH_NAME=${{ github.ref_name }}
+          PR_TITLE="Auto PR from ${BRANCH_NAME}"
+          PR_BODY="This is an auto-generated pull request from the branch '${BRANCH_NAME}' to 'development'.\n\nPlease review the changes and merge if appropriate."
+          PR_NUMBER=$(gh pr create --base development --head ${BRANCH_NAME} --title "${PR_TITLE}" --body "${PR_BODY}" --assignee ${{ github.actor }} --label "automated pr,feature,bugfix" --reviewer kaggwe-marvin --milestone 1 --json number --jq '.number')
+          echo "PR_NUMBER=${PR_NUMBER}" >> $GITHUB_ENV
+
+      - name: Output result
+        run: |
+          echo "Pull Request created with number ${{ env.PR_NUMBER }}"
 
       - name: Auto approve
-        if: steps.create_pr.outputs.pull-request-operation == 'created'
-        run: gh pr review --approve "${{ steps.create_pr.outputs.pull-request-number }}"
+        if: env.PR_NUMBER
+        run: gh pr review --approve "${{ env.PR_NUMBER }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable Pull Request Automerge
-        if: steps.create_pr.outputs.pull-request-operation == 'created'
-        uses: peter-evans/enable-pull-request-automerge@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ steps.create_pr.outputs.pull-request-number }}
-          merge-method: squash
+        if: env.PR_NUMBER
+        run: gh pr merge --auto --merge "${{ env.PR_NUMBER }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}"
