--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -25,7 +25,8 @@ jobs:
           BRANCH_NAME=${{ github.ref_name }}
           PR_TITLE="Auto PR from ${BRANCH_NAME}"
           PR_BODY="This is an auto-generated pull request from the branch '${BRANCH_NAME}' to 'development'.\n\nPlease review the changes and merge if appropriate."
-          PR_NUMBER=$(gh pr create --base development --head ${BRANCH_NAME} --title "${PR_TITLE}" --body "${PR_BODY}" --assignee ${{ github.actor }} --label "automated pr,feature,bugfix" --reviewer kaggwe-marvin --milestone 1 --json number --jq '.number')
+          gh pr create --base development --head ${BRANCH_NAME} --title "${PR_TITLE}" --body "${PR_BODY}" --assignee ${{ github.actor }} --label "automated pr,feature,bugfix" --reviewer kaggwe-marvin --milestone 1
+          PR_NUMBER=$(gh pr view --json number --jq '.number')
           echo "PR_NUMBER=${PR_NUMBER}" >> $GITHUB_ENV
 
       - name: Output result
@@ -42,4 +43,4 @@ jobs:
         if: env.PR_NUMBER
         run: gh pr merge --auto --merge "${{ env.PR_NUMBER }}"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
