--- a/.github/workflows/create-PR.yml
+++ b/.github/workflows/create-PR.yml
@@ -25,7 +25,7 @@ jobs:
           BRANCH_NAME=${{ github.ref_name }}
           PR_TITLE="Auto PR from ${BRANCH_NAME}"
           PR_BODY="This is an auto-generated pull request from the branch '${BRANCH_NAME}' to 'development'.\n\nPlease review the changes and merge if appropriate."
-          gh pr create --base development --head ${BRANCH_NAME} --title "${PR_TITLE}" --body "${PR_BODY}" --assignee ${{ github.actor }} --label "automated pr,feature,bugfix" --reviewer kaggwe-marvin --milestone 1
+          gh pr create --base development --head ${BRANCH_NAME} --title "${PR_TITLE}" --body "${PR_BODY}" --assignee ${{ github.actor }} --label "automated pr,feature,bugfix" --reviewer kaggwe-marvin --milestone "Release 1.0"
           PR_NUMBER=$(gh pr view --json number --jq '.number')
           echo "PR_NUMBER=${PR_NUMBER}" >> $GITHUB_ENV
         env:
